# projectlearn

./: README.md  cmake命令.md  ssh配置.md
cmakeLearn/: CMakeLists.txt
cmakeLearn/src/: a.out  hello.cpp  hello.h
